# covid-data

./: README.md
dataworker/: Cargo.toml  events.json  history.json
dataworker/hold/: alloc.rs  archive.rs  hold.rs  main2.rs  report.rs  sample.rs
dataworker/metrics/: csv-fetch.mem  csv-full.mem  csv-parse.mem  json-fetch.mem  json-full.mem  json-parse.mem
dataworker/pkg/: dataworker.d.ts  dataworker.js  dataworker_bg.d.ts  dataworker_bg.js  dataworker_bg.wasm  package-lock.json  package.json
dataworker/src/: fetcher.rs  lib.rs  parser.rs  utils.rs
viz/: Cargo.toml
viz/src/: fetcher.rs  lib.rs  main.rs
viz/src/components/: barrier.rs  dropdown.rs  mod.rs  table.rs
viz/src/sub_pub/: event_bus.rs  mod.rs
www/: index.html  index.js  package-lock.json  package.json  style.css
www/src/: Timer.js  VizMap.js  Worker.js
