[package]
name = "dataworker"
version = "0.1.0"
authors = ["hg.king <hg_king@external.mckinsey.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]


[dependencies]
reqwest = { version = "0.10.6", features = ["stream"] }
serde = { version = "1.0.101", features = ["derive"] }
serde_derive = "^1.0.59"
wasm-bindgen-futures = "0.4.1"
serde_json = "1.0.41"
wasm-bindgen = { version = "0.2.51", features = ["serde-serialize"]  }
csv = "1.1.3"
js-sys = { version = "0.3.40" }
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }
# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }
# libc = "0.2.71"
# argh = "0.1.3"
# bytesize = "1.0.1"
# textplots = "0.5.1"
smol_str = { version = "0.1.15", features = ["serde"] }
# parse-display = "0.1.2"
# smartstring = "0.2.3"
futures = "0.3"
# tokio = "0.2.21"
# bytes = "0.5.6"
lazy_static = "1.4.0"

[dependencies.web-sys]
version = "0.3.40"
features = [
  'CssStyleDeclaration',
  'Document',
  'Element',
  'HtmlElement',
  'Window',
]

[dev-dependencies]
tokio-test = "*"
