[package]
name = "viz"
version = "0.1.0"
authors = ["hg.king <hg_king@external.mckinsey.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = "0.15"
wasm-bindgen = "0.2.62"
reqwest = { version = "0.10.6", features = ["blocking", "json"] }
serde = "1.0.112"
wasm-bindgen-futures = "0.4.3"

[dependencies.web-sys]
version = "0.3.35"
features = [
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
]
